Fixed dot issue and letter spacing

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
     align-self: flex-end;
     font-size: 36px;
     font-family: digital;
-    letter-spacing: 5px;
+    letter-spacing: 2px;
 }
 
 #mainBtns {
@@ -124,7 +124,7 @@ button:active {
 @media (max-width: 400px) {
     #screenResult {
         font-size: 20px;
-        letter-spacing: 4px;
+        
     }
     button {
         font-size: 20px;
